examples/errors/array_index_out_of_range/main.lcc

function main() {
    const a = [1,2,3];
    print(a[3]);
}
